--- a/WZWalks/WZWalksAPI/appsettings.json
+++ b/WZWalks/WZWalksAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server= DESKTOP-OSTDV7J; Database=NZWalks; Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
